Fixed a few UI overflow bugs

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -69,6 +69,7 @@ header {
     transition: all;
 
     height: 100vh;
+    min-height: max-content;
 
     > div {
         flex-grow: 1;
@@ -80,7 +81,7 @@ header {
         background: transparent;
         border: none;
         font-weight: bold;
-        font-size: 4vw;
+        font-size: 3vw;
 
         :hover {
             --accent: var(--accent-contrast);
@@ -98,11 +99,11 @@ p {
 }
 
 h1 {
-    font-size: clamp(25pt, 140pt, 15vw);
+    font-size: clamp(25pt, 130pt, 15vw);
 }
 
 h2 {
-    font-size: clamp(20pt, 70pt, 10vw);
+    font-size: clamp(20pt, 65pt, 10vw);
 }
 
 h3 {
@@ -180,6 +181,8 @@ label[for="theme-picker"] {
 #showcase {
     display: grid;
 
+    max-width: 100vw;
+
     @media screen and (min-width: 14.2in) {
         grid-template-columns: 40% 27.5% 27.5%;
         column-gap: 2rem;
@@ -238,14 +241,16 @@ label[for="theme-picker"] {
 
 #toolbox {
     font-weight: bolder;
-    
-    @media screen and (max-width: 14.2in) {
-        ul {
-            display: grid;
-            grid-template-columns: 33.333333% 33.333333% 33.333333%;
-            column-gap: 2rem;
-        }   
+
+    height: 40vh;
+
+    ul {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        height: 100%;
     }
+
     li {
         line-height: 1.45rem;
     }
